# cq.rs

./: .gitignore  Cargo.toml  README.md
api_client/: Cargo.toml
api_client/src/: blocking.rs  client.rs  error.rs  lib.rs  main.rs  model.rs
cli/: Cargo.toml
cli/src/: import.rs  main.rs  model.rs
server/: Cargo.toml
server/src/: core.rs  error.rs  http.rs  infrastructure.rs  main.rs
server/src/core/: model.rs
server/src/core/model/: query.rs
server/src/http/: model.rs
server/src/infrastructure/: persistence.rs
src/: application.rs  core.rs  error.rs  http.rs  infrastructure.rs  lib.rs  main.rs  model.rs
src/core/: model.rs
src/http/: model.rs
src/infrastructure/: persistence.rs
tui/: Cargo.toml
tui/src/: main.rs
