[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
serde = { version = "1.0.213", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "tracing"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
