[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
api_client = { path = "../api_client" }
tokio = { version = "1.41.0", features = ["macros"] }
anyhow = "1.0.91"
uuid = { version = "1.11.0", features = ["v4"] }
time = { version = "0.3.36", features = ["serde"] }
