[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
api_client = { path = "../api_client" }
cursive = { version = "0.21.1", features = ["ansi", "builder"] }
cursive-tabs = "0.8.0"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
